# CSU44052-Computer-Graphics-Todhchai

./: .gitignore  CMakeLists.txt  README.md  sun.cpp  txt
assets/: cloud.mtl  minecraft.mtl  model.mtl  park.mtl  park2.mtl  testminecraft.mtl  tree.mtl  tree2.mtl  trees.mtl  voxel_Cloud_pixel__1223164304_texture.mtl
assets/building/: celtic_themed_sky_scr_1223200503_texture_35x90x34.mtl
configuration/: root_directory.h.in
includes/learnopengl/: camera.h
resources/objects/: structure.mtl  t.mtl  tower.mtl  trinity.mtl
resources/objects/avatar/: license.txt  scene.gltf
resources/objects/park/: park.mtl
resources/objects/trees/: tree1.mtl  tree2.mtl  trees.mtl
src/: main.cpp  scenes.cpp  scenes.h
src/3.model_loading/1.model_loading/: model_loading.cpp
src/helpers/: model_animation.h
src/includes/: AnimatedObject.cpp  AnimatedObject.h  BloomFBO.cpp  BloomFBO.h  BloomRenderer.cpp  BloomRenderer.h  Cube.cpp  Cube.h  Input.cpp  Input.h  Object.cpp  Object.h  Skybox.cpp  Skybox.h  Sun.cpp  Sun.h  Utils.cpp  Utils.h  model.h
src/shaders/: 3.2.2.point_shadows.fs  3.2.2.point_shadows_depth.fs  3.2.2.point_shadows_depth.gs  3.2.2.point_shadows_depth.vs  anime.vs  bloom.fs  bloom_final.fs  skybox.vs
todhchai/: SkyBoxVertex.glsl  skybox.frag  skybox.vert  todhchai.cpp  todhchai_n.cpp
todhchai/helpers/: camera.cpp  camera.h  objectLoader.cpp  objectLoader.h  postprocess.cpp  postprocess.h  texture.cpp  texture.h
todhchai/objects/: building.cpp  building.h  cloud.cpp  cloud.h  ground.cpp  ground.h  skybox.cpp  skybox.h  sun.cpp  sun.h
todhchai/render/: shader.cpp  shader.h
todhchai/shaders/: SkyBoxFragment.glsl  bloomFinal.frag  blur.frag  box.frag  box.vert  brightExtract.frag  cloud.frag  cloud.vert  depth_cube.frag  depth_cube.geom  screenQuad.vert  sun.frag  sun.vert  sun_billboard.frag  sun_billboard.vert
